setting a huge fixed height, so that even the 34-question block is not cut off

--- a/osha/surveyanswers/skins/surveyanswers/surveyanswers.css
+++ b/osha/surveyanswers/skins/surveyanswers/surveyanswers.css
@@ -34,6 +34,7 @@ body.section-sub-esener #portal-column-one {
 
 body.section-sub-esener #portal-column-content {
     width: 74%;
+    height: 1200px;
 }
 
 body.section-sub-esener #portal-breadcrumbs {
